reStyle y paisajes con grid

--- a/ejercicio-fotos/starWarsWiki.html
+++ b/ejercicio-fotos/starWarsWiki.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Document</title>
         <link href="starWars.css" rel="stylesheet" >
-        <link href="styles.css" rel="stylesheet" >
+        <link href="../styles.css" rel="stylesheet" >
     </head>
     <body>
         <div class="width-33 Inicio">
@@ -15,15 +15,15 @@
         <h2>Star Wars images</h2>
         <div class="display-flex justify-content">
             <div class="card">
-                <img class="image-size" src="images/anakin.png">
+                <img class="image-size" src="../images/anakin.png">
                 <span class="nameChar">Anakin Skywalker</span>
             </div>
             <div class="card">
-                <img class="image-size" src="images/obiwan.png">
+                <img class="image-size" src="../images/obiwan.png">
                 <span class="nameChar">Obiwan Kenovi</span>
             </div>
             <div class="card">
-                <img class="image-size" src="images/grievous.png">
+                <img class="image-size" src="../images/grievous.png">
                 <span class="nameChar">General Grievous</span>
             </div>
         </div>
