--- a/ejercicio-paisajes/starWarsPaisajes.html
+++ b/ejercicio-paisajes/starWarsPaisajes.html
@@ -5,14 +5,14 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Document</title>
         <link rel="stylesheet" href="paisajes.css">
-        <link rel="stylesheet" href="styles.css">
+        <link rel="stylesheet" href="../styles.css">
     </head>
     <body class="justify-content-center">
 
         <div class="navbar-container">
             <ul class="horizontal">
-                <li class="home">
-                    <a href="index.html">Home</a>
+                <li>
+                    <a href="../index.html">Home</a>
                 </li>
                 <li>
                     <a href="#">Miau 1</a>
@@ -28,7 +28,7 @@
         <div class="images-container">
             <div class="card-container">
                 <div class="card">
-                    <img src="images/felucia.jpg" alt="">
+                    <img src="../images/felucia.jpg" alt="">
                     <div class="landScape-name">    
                         <span class="text">Felucia</span>
                     </div>
@@ -36,7 +36,7 @@
             </div>
             <div class="card-container">
                 <div class="card">
-                    <img src="images/korriban.jpg" alt="">
+                    <img src="../images/korriban.jpg" alt="">
                     <div class="landScape-name">
                         <span class="text">Korriban</span>
                     </div>
@@ -44,7 +44,7 @@
             </div>
             <div class="card-container">
                 <div class="card">
-                    <img src="images/takodana.jpg" alt="">
+                    <img src="../images/takodana.jpg" alt="">
                     <div class="landScape-name">
                         <span class="text">Takodana</span>
                     </div>
