--- a/index.html
+++ b/index.html
@@ -13,10 +13,30 @@
             <div class="width-33">
                 <ul class="display-block">
                     <li>
-                        <a href="starWarsWiki.html">Viernes 1ra.Semana - Fotos</a>
+                        <a href="ejercicio-fotos/starWarsWiki.html">Fotos</a>
                     </li>
                     <li>
-                        <a href="starWarsPaisajes.html">Lunes 2ra.Semana - Paisajes</a>
+                        <a href="ejercicio-paisajes/starWarsPaisajes.html">Paisajes</a>
+                    </li>
+                    <details>
+                        <summary>Posicionamiento</summary>
+                        <ul class="display-block">
+                            <li>
+                                <a href="ejercicio-posicionamiento/20-05-pos01.html">primero</a>
+                            </li>
+                            <li>
+                                <a href="ejercicio-posicionamiento/20-05-pos02.html">segundo</a>
+                            </li>
+                            <li>
+                                <a href="ejercicio-posicionamiento/20-05-pos03.html">tercero</a>
+                            </li>
+                            <li>
+                                <a href="ejercicio-posicionamiento/20-05-pos04.html">texto pie de foto</a>
+                            </li>
+                        </ul>
+                    </details>
+                    <li>
+                        <a href="ejercicio-grid-paisajes/gridPaisajes.html">Paisajes con Grid</a>
                     </li>
                 </ul>
             </div>
