--- a/fotos/starWarsWiki.html
+++ b/fotos/starWarsWiki.html
@@ -9,7 +9,7 @@
     </head>
     <body>
         <div class="width-33 Inicio">
-            <a href="index.html">Inicio</a>
+            <a href="../index.html">Inicio</a>
         </div>
         <h1>Star Wars</h1>
         <h2>Star Wars images</h2>
