--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Document</title>
         <link href="styles.css" rel="stylesheet" >
+        <link rel="stylesheet" href="index.css">
     </head>
     <body>
         <h1>Inicio</h1>
@@ -13,30 +14,36 @@
             <div class="width-33">
                 <ul class="display-block">
                     <li>
-                        <a href="ejercicio-fotos/starWarsWiki.html">Fotos</a>
+                        <a href="fotos/starWarsWiki.html">Fotos</a>
                     </li>
                     <li>
-                        <a href="ejercicio-paisajes/starWarsPaisajes.html">Paisajes</a>
+                        <a href="paisajes/starWarsPaisajes.html">Paisajes</a>
                     </li>
                     <details>
                         <summary>Posicionamiento</summary>
                         <ul class="display-block">
                             <li>
-                                <a href="ejercicio-posicionamiento/20-05-pos01.html">primero</a>
+                                <a href="posicionamiento/20-05-pos01.html">primero</a>
                             </li>
                             <li>
-                                <a href="ejercicio-posicionamiento/20-05-pos02.html">segundo</a>
+                                <a href="posicionamiento/20-05-pos02.html">segundo</a>
                             </li>
                             <li>
-                                <a href="ejercicio-posicionamiento/20-05-pos03.html">tercero</a>
+                                <a href="posicionamiento/20-05-pos03.html">tercero</a>
                             </li>
                             <li>
-                                <a href="ejercicio-posicionamiento/20-05-pos04.html">texto pie de foto</a>
+                                <a href="posicionamiento/20-05-pos04.html">texto pie de foto</a>
                             </li>
                         </ul>
                     </details>
                     <li>
-                        <a href="ejercicio-grid-paisajes/gridPaisajes.html">Paisajes con Grid</a>
+                        <a href="grid-paisajes/gridPaisajes.html">Paisajes con Grid</a>
+                    </li>
+                    <li>
+                        <a href="less/gridPaisajes.html">Less</a>
+                    </li>
+                    <li>
+                        <a href="js/jsIndex.html">JavaScript</a>
                     </li>
                 </ul>
             </div>
