--- a/less/gridPaisajes.html
+++ b/less/gridPaisajes.html
@@ -9,9 +9,6 @@
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     </head>
     <body>
-        <div class="width-33 Inicio">
-            <a href="../index.html">Inicio</a>
-        </div>
         <div id="main">
             <div id="header">
                 <div class="navbar-container">
@@ -44,7 +41,7 @@
                 <div class="photos-container">
                     <div class="card-container">
                         <div class="card">
-                            <img src="../images/felucia.jpg" alt="">
+                            <img src="https://i.ibb.co/QpPBmcx/felucia.jpg">
                             <div class="landScape-name">    
                                 <span class="text">Felucia</span>
                             </div>
@@ -52,7 +49,7 @@
                     </div>
                     <div class="card-container">
                         <div class="card">
-                            <img src="../images/korriban.jpg" alt="">
+                            <img src="https://i.ibb.co/pvLMRdT/korriban.jpg">
                             <div class="landScape-name">    
                                 <span class="text">Korriban</span>
                             </div>
@@ -60,7 +57,7 @@
                     </div>
                     <div class="card-container">
                         <div class="card">
-                            <img src="../images/takodana.jpg" alt="">
+                            <img src="https://i.ibb.co/5WfPGxr/takodana.jpg">
                             <div class="landScape-name">    
                                 <span class="text">Tadokana</span>
                             </div>
