--- a/index.html
+++ b/index.html
@@ -42,9 +42,20 @@
                     <li>
                         <a href="less/gridPaisajes.html">Less</a>
                     </li>
-                    <li>
-                        <a href="js/jsIndex.html">JavaScript</a>
-                    </li>
+                    <details>
+                        <summary>JavaScript</summary>
+                        <ul class="display-block">
+                            <li>
+                                <a href="js/jsIndex.html">indexJS</a>
+                            </li>
+                            <li>
+                                <a href="js/arrays.html">Arrays</a>
+                            </li>
+                            <li>
+                                <a href="js/webStorage.html">webStorage</a>
+                            </li>
+                        </ul>
+                    </details>
                 </ul>
             </div>
         </details>
