--- a/index.html
+++ b/index.html
@@ -3,16 +3,19 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Document</title>
-        <link href="styles.css" rel="stylesheet" >
+
+        <link rel="stylesheet" href="styles.css">
         <link rel="stylesheet" href="index.css">
+
+        <title>Index</title>
+
     </head>
     <body>
         <h1>Inicio</h1>
         <details>
             <summary>Ejercicios</summary>
             <div class="width-33">
-                <ul class="display-block">
+                <ul>
                     <li>
                         <a href="fotos/starWarsWiki.html">Fotos</a>
                     </li>
@@ -21,7 +24,7 @@
                     </li>
                     <details>
                         <summary>Posicionamiento</summary>
-                        <ul class="display-block">
+                        <ul>
                             <li>
                                 <a href="posicionamiento/20-05-pos01.html">primero</a>
                             </li>
@@ -44,7 +47,7 @@
                     </li>
                     <details>
                         <summary>JavaScript</summary>
-                        <ul class="display-block">
+                        <ul>
                             <li>
                                 <a href="js/jsIndex.html">indexJS</a>
                             </li>
@@ -56,6 +59,9 @@
                             </li>
                         </ul>
                     </details>
+                    <li>
+                        <a href="xml/xml.html">XML</a>
+                    </li>
                 </ul>
             </div>
         </details>
