--- a/xml/xml.html
+++ b/xml/xml.html
@@ -16,12 +16,32 @@
             <h1>XML</h1>
         </header>
         <main>
-            <div class="container-fluid">
-
+            <div class="list d-flex flex-wrap container-fluid">
             </div>
         </main>
+        <div class="modal fade" id="modal">
+            <div class="modal-dialog">
+              <div class="modal-content">
+                <div class="modal-header">
+                  <button type="button" class="btn-close" onclick="closeModal()" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                  ...
+                </div>
+                <div class="modal-footer">
+                  <button type="button" onclick="closeModal()">Close</button>
+                </div>
+              </div>
+            </div>
+        </div>
         <footer>
-            <script src="xml.js"></script>
+            
         </footer>
     </body>
+
+    <!-- SCRIPTS -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+    <script src="xml.js"></script>
+
 </html>
