--- a/index.html
+++ b/index.html
@@ -62,6 +62,9 @@
                     <li>
                         <a href="xml/xml.html">XML</a>
                     </li>
+                    <li>
+                        <a href="stream/stream.html">XML</a>
+                    </li>
                 </ul>
             </div>
         </details>
