--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                         <a href="xml/xml.html">XML</a>
                     </li>
                     <li>
-                        <a href="stream/stream.html">XML</a>
+                        <a href="stream/stream.html">Stream</a>
                     </li>
                 </ul>
             </div>
