--- a/index.html
+++ b/index.html
@@ -65,6 +65,9 @@
                     <li>
                         <a href="stream/stream.html">Stream</a>
                     </li>
+                    <li>
+                        <a href="https://juanillodg.github.io/ProyectoCMV/">Proyecto en Angular</a>
+                    </li>
                 </ul>
             </div>
         </details>
